<resources>
    <string name="app_name">Lister</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="hello">Welcome %1$s!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="firestore_button">Launch Firestore Activity</string>
    <string name="recent_listings">Recent Listings</string>
    <string name="create_post">Create Post</string>
    <string name="search">Search</string>
    <string name="your_listings">Your Listings</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="created_on">Created on %1$s</string>
    <string name="poster_uid">Poster ID: %1$s</string>
    <string name="price_dollar">$%1$s</string>
    <string name="delete_post">Delete Post</string>
    <string name="update_post">Update Post</string>
    <string name="exact_title">Exact title</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="no_results">No results</string>
    <string name="none">None</string>



</resources>
